--- a/templates/components/sidebar.html.twig
+++ b/templates/components/sidebar.html.twig
@@ -8,7 +8,7 @@
   flex-direction: column;
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 4px 0 24px rgba(0, 0, 0, 0.04);
-  position: relative;
+  position: fixed;
   z-index: 10;
   height: 90vh;
 }
