--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -30,7 +30,7 @@
 }
         
         body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+              font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             background: #F8FAFC;
             color: #0F172A;
         }
@@ -53,7 +53,7 @@
 .main-content {
   width: 100%;
   max-width: 1000px; /* limite la largeur pour un effet centré et lisible */
-  padding: 20px;
+  padding: 10px;
   background: var(--color-white);
   border-radius: 12px;
   box-shadow: var(--shadow-sm);
@@ -62,7 +62,7 @@
 @media (max-width: 768px) {
   .wrapper-layout {
     margin-left: 0;
-    padding: 20px;
+    padding: 0px;
   }
 
   .main-content {
@@ -103,7 +103,15 @@
   }
 
   /* Ajustements visuels spécifiques */
+  body{
+     background: var(--color-white);
+  }
+.main-content {
 
+  background: var(--color-white);
+  border-radius: 0px;
+  box-shadow: none;
+}
   /* Header */
   .header_top {
     background: linear-gradient(to bottom, var(--color-bg-light), var(--color-white));
@@ -177,3 +185,21 @@
     color: var(--color-text-medium);
   }
 
+/* === SPINNER DE VALIDATION === */
+.spinner {
+  display: inline-block;
+  width: 22px;
+  height: 22px;
+  border: 3px solid var(--color-primary-hover); /* cercle plus pâle */
+  border-top: 3px solid var(--color-primary);   /* accent vert */
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+  vertical-align: middle;
+  margin-left: 8px;
+  box-shadow: var(--shadow-green);
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
