credential create front optimisation

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,8 @@
     {% block javascripts %}
       {% block importmap %}{{ importmap('app') }}{% endblock %}
     {% endblock %}
+
+    {% block stylesheets %}{% endblock %}
   </head>
 
   <body>
